# yatl-python

./: .bumpversion.cfg  .gitignore  Makefile  README-build.md  README.md  requirements-build.txt
.github/workflows/: deploy-test.yml  run-tests.yml
docs/: api.md  index.md
examples/: choice_example.py  cloud_event_trigger_example.py  complete_example.py  http_trigger_example.py  loop_example.py  parallel_example.py  schedule_trigger_example.py  simple_workflow.py  task_example.py  webhook_trigger_example.py
src/: pyproject.toml
src/yatl/: __init__.py  compiler.py  parser.py  runtime.py  utils.py  validator.py
tests/: test_compiler.py  test_parser.py  test_runtime.py  test_utils.py  test_validator.py
